methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:6: error: ':' expected but '.' found.
def faireFleur(c.Color){
                ^FlowerPot:30: error: identifier expected but '}' found.
}
^